--- a/astro_2.0/features/ViewProposal/components/TransferContent/TransferContent.module.scss
+++ b/astro_2.0/features/ViewProposal/components/TransferContent/TransferContent.module.scss
@@ -3,6 +3,7 @@
 
 .root {
   display: flex;
+  width: 100%;
 
   > div:nth-child(2) {
     margin-left: 8px;
@@ -10,6 +11,7 @@
 
   > div:last-of-type {
     margin-left: 24px;
+    overflow: hidden;
   }
 }
 
